cambios rama-daniel

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     background-color: black;
+    color: white;
 }
 
 .wrapper{
@@ -11,14 +12,20 @@
     color: white;
     text-align: center;
 }
+
+.containt_title_spiderman{
+}
 .containt_img{
     margin-top: 5rem;
+    justify-content: center;
+}
+.box_img{
     display: flex;
     justify-content: center;
 }
 .img_spiderman{
+    border: solid 4px yellow;
     width: 30rem;
     height: 30rem;
-    border: solid yellow 4px;
     border-radius: 50%;
 }
